--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -6,6 +6,11 @@ on:
   schedule:
     - cron: '0 0 * * 0'
 
+# Add permissions for the workflow
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   trivy-scan:
     runs-on: ubuntu-latest
