--- a/helm-charts/sample-app/templates/pdb.yaml
+++ b/helm-charts/sample-app/templates/pdb.yaml
@@ -6,7 +6,12 @@ metadata:
   labels:
     {{- include "sample-app.labels" . | nindent 4 }}
 spec:
+  {{- if .Values.podDisruptionBudget.minAvailable }}
   minAvailable: {{ .Values.podDisruptionBudget.minAvailable }}
+  {{- end }}
+  {{- if .Values.podDisruptionBudget.maxUnavailable }}
+  maxUnavailable: {{ .Values.podDisruptionBudget.maxUnavailable }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "sample-app.selectorLabels" . | nindent 6 }}
