--- a/helm-charts/sample-app/values.yaml
+++ b/helm-charts/sample-app/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 2
 image:
   repository: leke1995/sample-app
   pullPolicy: IfNotPresent
-  tag: "latest"
+  tag: "v1.0.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -23,8 +23,9 @@ podAnnotations:
 
 podSecurityContext:
   runAsNonRoot: true
-  runAsUser: 1000
-  fsGroup: 1000
+  runAsUser: 10001
+  runAsGroup: 10001
+  fsGroup: 10001
   seccompProfile:
     type: RuntimeDefault
 
@@ -60,9 +61,11 @@ resources:
   limits:
     cpu: 200m
     memory: 256Mi
+    ephemeral-storage: 256Mi
   requests:
     cpu: 100m
     memory: 128Mi
+    ephemeral-storage: 100Mi
 
 autoscaling:
   enabled: true
@@ -120,3 +123,6 @@ serviceMonitor:
 podDisruptionBudget:
   enabled: true
   minAvailable: 1
+
+networkPolicy:
+  enabled: true
