--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,11 @@ jobs:
         uses: azure/k8s-lint@v1
         with:
           manifests: |
-            k8s/base/*.yml
-            k8s/overlays/**/*.yml
+            k8s/base/deployment.yml
+            k8s/base/service.yml
+            k8s/base/servicemonitor.yml
+            k8s/base/pdb.yaml
+            k8s/base/networkpolicy.yaml
 
   build-and-push:
     needs: test
