--- a/k8s/base/networkpolicy.yaml
+++ b/k8s/base/networkpolicy.yaml
@@ -12,10 +12,30 @@ spec:
   - Ingress
   - Egress
   ingress:
+  # Allow traffic from pods with the same label (internal traffic)
   - from:
     - podSelector:
         matchLabels:
           app: sample-app
+    ports:
+    - protocol: TCP
+      port: 8080
+  # Allow traffic from any namespace with specific labels (e.g., ingress controller)
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          name: ingress-nginx
+      podSelector:
+        matchLabels:
+          app.kubernetes.io/name: ingress-nginx
+    ports:
+    - protocol: TCP
+      port: 8080
+  # Allow traffic from monitoring namespace (for Prometheus scraping)
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          name: monitoring
     ports:
     - protocol: TCP
       port: 8080
