--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           wget https://github.com/zegl/kube-score/releases/download/v1.18.0/kube-score_1.18.0_linux_amd64
           chmod +x kube-score_1.18.0_linux_amd64
-          ./kube-score_1.18.0_linux_amd64 score k8s/base/*.yml
+          ./kube-score_1.18.0_linux_amd64 score k8s/base/deployment.yml k8s/base/service.yml k8s/base/networkpolicy.yaml
