Fix kube-score issue by running it on kustomize output instead of individual files

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -35,8 +35,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Run kube-score
+      - name: Set up kustomize
+        run: |
+          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+          sudo mv kustomize /usr/local/bin/
+      
+      - name: Run kube-score on kustomize output
         run: |
           wget https://github.com/zegl/kube-score/releases/download/v1.18.0/kube-score_1.18.0_linux_amd64
           chmod +x kube-score_1.18.0_linux_amd64
-          ./kube-score_1.18.0_linux_amd64 score k8s/base/deployment.yml k8s/base/service.yml k8s/base/networkpolicy.yaml
+          kustomize build k8s/base | ./kube-score_1.18.0_linux_amd64 score -
