--- a/argocd/applications/sample-app-staging.yml
+++ b/argocd/applications/sample-app-staging.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-org/your-repo
+    repoURL: https://github.com/leketech/ArgoStack.git
     targetRevision: main
     path: k8s/overlays/staging
   destination:
